<resources>
    <string name="app_name">PUC Maps Manager</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <!-- region Maps Activity -->

    <string name="title_activity_maps">Map</string>

    <!-- endregion -->

    <!-- region Vertex Details -->

    <string name="hint_bottomsheet_vertex_details_latitude">@string/latitude</string>
    <string name="hint_bottomsheet_vertex_details_longitude">@string/longitude</string>
    <string name="hint_bottomsheet_vertex_details_place_name">Place name</string>
    <string name="title_bottomsheet_vertex_details">Vertex details</string>
    <string name="switch_bottomsheet_vertex_details_location_is_place">This location is a place</string>

    <!-- endregion -->

    <!-- region Permissions Explanations -->

    <string name="permission_explanation_access_fine_location">In order to localize and guide you the app needs access to the most precise geolocation information.</string>
    <string name="permission_explanation_access_coarse_location">@string/permission_explanation_access_fine_location</string>

    <!-- endregion -->

    <!-- region Actions -->

    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_new_place">New place</string>
    <string name="action_save">Save</string>
    <string name="action_saving">Saving</string>
    <string name="action_save_map">Save map</string>
    <string name="action_settings">Settings</string>
    <string name="action_wait">Wait</string>

    <!-- endregion -->
</resources>